--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
   margin: 0px;
   padding: 0px;
 }
@@ -24,40 +24,46 @@
 }
 
 .right-side {
-  width: 70%
+  width: 70%;
 }
 
 /* FORM NAVIGATION COMPONENT */
 
 .step-section {
   display: flex;
-  margin: 20px;
+  margin: 25px;
 }
 
 .form-circle {
   height: 25px;
   width: 25px;
+  color: white;
   border-radius: 50%;
-  background-color: hsl(228, 100%, 84%);
-  display: inline-block;
-  /* height: 100%; */
-  line-height: 1.25;
-  padding: 0;
+  border: solid 1.2px white;
+  background-color: transparent;
   text-align: center;
+  font-size: 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.step-text-section {
+  margin: 0px 0px 0px 15px;
+  display: grid;
+  letter-spacing: 0.6px;
 }
 
 .step-text {
-  margin: 0px 0px 0px 10px;
-}
-
-.step {
-  color: hsl(231, 11%, 63%);
-  font-weight: 400px;
+  /* - Cool gray: hsl(231, 11%, 63%)
+- Light gray: hsl(229, 24%, 87%) */
+  color: hsl(229, 24%, 87%);
+  font-weight: 400;
   font-size: 8px;
 }
 
 .step-subtext {
   color: white;
-  font-weight: 700px;
+  font-weight: 600;
   font-size: 10px;
 }
