added background image to navbar

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,8 @@
 .left-side {
   width: 30%;
   background-color: hsl(243, 100%, 62%);
+  background-image: url("./assets/bg-sidebar-desktop.svg");
+  background-size: cover;
 }
 
 .right-side {
