--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 
 .right-side {
   width: 70%;
+  margin: 20px 40px 0 50px;
 }
 
 /* FORM NAVIGATION COMPONENT */
@@ -54,7 +55,7 @@
 .step-text-section {
   margin: 0px 0px 0px 15px;
   display: grid;
-  letter-spacing: 0.6px;
+  letter-spacing: 1px;
 }
 
 .step-text {
@@ -69,4 +70,26 @@
   color: white;
   font-weight: 600;
   font-size: 10px;
+}
+
+/* RIGHT SIDE */
+.form-title {
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+  color: hsl(213, 96%, 18%);
+}
+.form-subtitle {
+  font-size: 0.7rem;
+  letter-spacing: 0.2px;
+  font-weight: 200;
+  padding: 5px 0 20px 0;
+  color: hsl(231, 11%, 63%);
+}
+.form-personal-form-text {
+  font-size: 0.7rem;
+  color: hsl(213, 96%, 18%);
+  padding: 0 0 3px 0;
+}
+.form-personal-input {
+  width: 80%;
 }
