--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
 .plan-card {
   border: 1px solid hsl(229, 24%, 87%);
   border-radius: 5px;
-  padding: 10px 50px 10px 10px;
+  padding: 10px 30px 10px 10px;
 }
 .plan-card-icon {
   max-width: 25px;
@@ -130,4 +130,6 @@
   letter-spacing: 0.2px;
   font-weight: 200;
   color: hsl(213, 96%, 18%);
+  inline-size: min-content;
+  width: 87px;
 }
