--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@
   padding: 10px 30px 10px 10px;
   min-width: 24%;
   margin-right: 3px;
+  cursor: pointer;
 }
 .plan-card-icon {
   max-width: 30px;
