--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 #root {
-  background-color: aliceblue;
+  background-color: white;
   width: 100vw;
   min-height: 100vh;
 }
@@ -70,13 +70,13 @@
   font-size: 10px;
 }
 
-/* RIGHT SIDE FORM*/
+/***************** RIGHT SIDE FORM*/
 .right-side {
   max-width: 70%;
   margin: 20px 40px 0 50px;
 }
 .nav-buttons {
-  max-width: 90%;
+  max-width: 75%;
   display: flex;
   /* justify-content: space-between; */
 }
@@ -107,12 +107,14 @@
 .plan-card-section {
   display: flex;
   justify-content: space-between;
+  max-width: 90%;
 }
 .plan-card {
   border: 1px solid hsl(229, 24%, 87%);
   border-radius: 5px;
-  padding: 10px 30px 10px 10px;
-  min-width: 24%;
+  padding: 10px 20px 10px 10px;
+  /* min-width: 24%; */
+  max-width: 40%;
   margin-right: 3px;
   cursor: pointer;
 }
@@ -150,7 +152,7 @@
   letter-spacing: 0.1px;
   font-weight: 500;
   color: hsl(213, 96%, 18%);
-
+  max-width: 93%;
   display: flex;
   align-items: center;
   justify-content: center;
